[package]
name = "ya-vpn-connector"
version = "0.2.1"
authors = ["Sieciech Czajka <sieciech.czajka@golem.network>", "Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>"]
edition = "2021"
#description=""
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
bytes = "1.4.0"
byteorder = "1.3.2"
structopt = "0.3.5"
packet = "0.1"
futures = "0.3.1"
actix = "0.13.0"
awc = "3.0.0"
futures-util = "0.3.26"
actix-codec = "0.5.0"
log = "0.4.14"
actix-rt = "2.4.0"
env_logger = "0.10.0"
hex = "0.4.3"
async-trait = "0.1.51"
libc = "0.2.101"
# fork contains for know fixes to compilation on Windows
tun = { version = "0.5.5", features = ["async"], git = "https://github.com/scx1332/golem-rust-tun.git" }
# use original one if don't need windows build
# tun = { version = "0.5.5", features = ["async"] }
ya-relay-stack = { version = "0.4.1" }

[profile.release-lto]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
panic ="abort"
